# mamba-vs-gpt

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  benchmark.py  common_fns.py  eval_data.txt  gpt_train.py  mamba_train.py  pyproject.toml  sql_eval.py
runners/: init.sh  run_gpt.sh  run_mamba.sh  setup.sh
