[project]
name = "mamba-vs-gpt"
version = "0.1.0"
description = "Comparison of Mamba vs GPT after extended pre-training"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "accelerate>=1.13.0",
  "bitsandbytes>=0.49.2",
  "datasets>=4.6.1",
  "huggingface-hub>=1.6.0",
  "peft>=0.18.1",
  "torch>=2.9.1",
  "torchvision>=0.24.1",
  "transformers>=5.3.0",
  "trl>=0.29.0",
  "wandb>=0.25.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true