[project]
name = "mamba-vs-gpt"
version = "0.1.0"
description = "Comparison of Mamba vs GPT after extended pre-training"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "accelerate>=1.13.0",
  "bitsandbytes>=0.49.2",
  "datasets>=4.6.1",
  "causal-conv1d>=1.4.0",
  "mamba-ssm>=2.2.4",
  "huggingface-hub>=1.6.0",
  "peft>=0.18.1",
  "sqlglot>=29.0.1",
  "torch>=2.9.1",
  "torchvision>=0.24.1",
  "transformers>=5.3.0",
  "trl>=0.29.0",
  "google-cloud-storage>=2.19.0",
  "wandb>=0.25.0",
  "flash-attn>=2.8.3",
]

[tool.uv.extra-build-dependencies]
causal-conv1d = ["torch"]
mamba-ssm = ["torch"]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
flash-attn = { url = "https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.7.16/flash_attn-2.8.3%2Bcu128torch2.9-cp312-cp312-linux_x86_64.whl" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
